# LABA8

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Client.h  Server.h  header.hpp  log.h
sources/: Client.cpp  Server.cpp  log.cpp  main.cpp  source.cpp
